@@ -34,6 +34,7 @@ CONTENT_OPTION_FILTER_ARCHIVED="Archived"
 
 CONTENT_PAGE_EDIT_ARTICLE="Article Manager: Edit Article"
 CONTENT_PAGE_ADD_ARTICLE="Article Manager: Add New Article"
+CONTENT_PAGE_VIEW_ARTICLE="Article Manager: View Article"
 
 CONTENT_OPTION_BLACK_LIST="Black List (Default)"
 CONTENT_OPTION_WHITE_LIST="White List"
