@@ -57,6 +57,8 @@ JINVALID_TOKEN="The most recent request was denied because it contained an inval
 JERROR_NO_ITEMS_SELECTED="No item(s) selected."
 JERROR_CHECKIN_FAILED="Check-in failed with the following error: %s"
 JERROR_CHECKIN_USER_MISMATCH="The user checking in does not match the user who checked out the item."
+JERROR_CHECKOUT_FAILED="Check-out failed with the following error: %s"
+JERROR_CHECKOUT_USER_MISMATCH="The user checking out does not match the user who checked out the item."
 JERROR_SAVE_FAILED="Save failed with the following error: %s"
 JERROR_FILE_NOT_FOUND="The file %s could not be found."
 JWARNING_PUBLISH_MUST_SELECT="You must select at least one item to publish."
